--- a/.drone.yml
+++ b/.drone.yml
@@ -12,3 +12,37 @@ steps:
     image: maven:3.8.3-openjdk-17
     commands:
       - mvn clean package
+
+---
+kind: pipeline
+type: kubernetes
+name: build notifications
+
+trigger:
+  status:
+    - success
+    - failure
+  event:
+    - push
+
+depends_on:
+  - callisto-accruals-restapi
+
+steps:
+  - name: slack
+    image: plugins/slack
+    settings:
+      webhook:
+        from_secret: slack_webhook_url
+      channel: callisto-tech-notifications
+      username: Drone
+      template: |
+        {{#success build.status}}
+          Build #{{ build.number }} succeeded! :tada:
+        {{else}}
+          Build #{{ build.number }} failed :alert:
+        {{/success}}
+        Commit: <${DRONE_REPO_LINK}/commit/{{ build.commit }}|{{ truncate build.commit 8 }}> - {{{ trim build.message }}}
+        Repo: {{ repo.name }}
+        Branch: <${DRONE_REPO_LINK}/commits/{{ build.branch }}|{{ build.branch }}>
+        Author: {{ build.author }}
