--- a/.drone.yml
+++ b/.drone.yml
@@ -10,8 +10,29 @@ platform:
 steps:
   - name: build
     image: maven:3.8.3-openjdk-17
+    environment:
+      ARTIFACTORY_TOKEN:
+        from_secret: artifactory_token
     commands:
-      - mvn clean package
+      - mvn -s ./accruals_settings.xml clean package
+
+  - name: sonar
+    image: maven:3.8.3-openjdk-17
+    depends_on:
+      - build
+    environment:
+      ARTIFACTORY_TOKEN:
+        from_secret: artifactory_token
+      SONAR_HOST:
+        from_secret: sonar_cloud_host
+      SONAR_TOKEN:
+        from_secret: sonar_cloud_token
+    commands:
+      - mvn -s ./accruals_settings.xml sonar:sonar -Dsonar.host.url=$${SONAR_HOST} -Dsonar.login=$${SONAR_TOKEN} -Dsonar.organization=ukhomeoffice -Dsonar.projectKey=callisto-accruals-restapi -Dsonar.branch.name=$DRONE_BRANCH -Dsonar.projectName=callisto-accruals-restapi -Dsonar.qualitygate.wait=true
+    when:
+      event:
+        exclude:
+          - pull_request
 
   - name: lint_dockerfile
     pull: if-not-exists
