--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
       ARTIFACTORY_TOKEN:
         from_secret: artifactory_token
     commands:
-      - mvn -s ./accruals_settings.xml clean package
+      - mvn -s ./accruals_settings.xml clean verify
 
   - name: sonar
     image: maven:3.8.3-openjdk-17
