Fix flag position

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -32,4 +32,5 @@ spec:
           ports:
             - name: http
               containerPort: 8080
-          allowPrivilegeEscalation: true
+          securityContext:
+            allowPrivilegeEscalation: true
