--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8080
+
+spring.kafka.bootstrap-servers=${BOOTSTRAP_BROKERS}
+spring.kafka.ssl.key-password=${PASSWORD}
+spring.kafka.admin.ssl.key-store-location=classpath:kafka.client.keytore.jks
+spring.kafka.admin.ssl.key-password=${PASSWORD}
