--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.homeoffice.digital.sas</groupId>
+            <artifactId>jparest</artifactId>
+            <version>0.0.10</version>
+        </dependency>
 	</dependencies>
 
 	<build>
