--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .Release.Name }}
   labels:
-    app: {{ .Values.name }}
+    app: {{ .Release.Name }}
 spec:
   selector:
-    app: {{ .Values.name }}
+    app: {{ .Release.Name }}
   type: ClusterIP
   ports:
     - name: https
