--- a/.drone.yml
+++ b/.drone.yml
@@ -1,26 +1,31 @@
-#---
-#kind: pipeline
-#type: kubernetes
-#name: lint-files
-#
-#platform:
-#  os: linux
-#  arch: amd64
-#
-#steps:
-#  - name: lint_dockerfile
-#    pull: if-not-exists
-#    image: hadolint/hadolint:latest-alpine
-#    commands:
-#      - hadolint Dockerfile
-#
-#  - name: lint_helm_files
-#    image: pelotech/drone-helm3
-#    settings:
-#      mode: lint
-#      chart: ./helm
-#      values_file: ./helm/values.yaml
-#
+---
+kind: pipeline
+type: kubernetes
+name: lint-files
+
+platform:
+  os: linux
+  arch: amd64
+
+trigger:
+  event:
+    exclude:
+      - promote
+
+steps:
+  - name: lint_dockerfile
+    pull: if-not-exists
+    image: hadolint/hadolint:latest-alpine
+    commands:
+      - hadolint Dockerfile
+
+  - name: lint_helm_files
+    image: pelotech/drone-helm3
+    settings:
+      mode: lint
+      chart: ./helm
+      values_file: ./helm/values.yaml
+
 ---
 kind: pipeline
 type: kubernetes
