Revert "Remove downscaler annotation"
This reverts commit e231b2f48cf01f6e5fac13c95650d709d982f340.

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -5,6 +5,8 @@ metadata:
   name: {{ .Release.Name }}
   labels:
     app: {{ .Release.Name }}
+  annotations:
+    downscaler/uptime: Mon-Fri 08:00-20:00 Europe/London
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
