Revert "Use release name for helm files"
This reverts commit 3b942a214cad7d0491f7693cdba1429ce1733e6d.

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -2,20 +2,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Values.name }}
   labels:
-    app: {{ .Release.Name }}
-  annotations:
-    downscaler/uptime: Mon-Fri 08:00-20:00 Europe/London
+    app: {{ .Values.name }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ .Release.Name }}
+      app: {{ .Values.name }}
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}
+        app: {{ .Values.name }}
     spec:
       securityContext:
         runAsUser: 1001
