--- a/helm/templates/networkpolicy.yaml
+++ b/helm/templates/networkpolicy.yaml
@@ -2,11 +2,11 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: {{ .Release.Name }}-network-policy
+  name: ingress-network-policy-callisto-accruals
 spec:
   podSelector:
     matchLabels:
-      app: {{ .Release.Name }}
+      app: {{ .Values.name }}
   ingress:
     - {}
   egress:
