--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Values.name }}
   labels:
-    app: {{ .Release.Name }}
+    app: {{ .Values.name }}
 spec:
   selector:
-    app: {{ .Release.Name }}
+    app: {{ .Values.name }}
   type: ClusterIP
   ports:
     - name: https
