Upgrade Spring Boot version, import jparest and create initial Agreement model

--- a/helm/values/dev-values.yaml
+++ b/helm/values/dev-values.yaml
@@ -2,6 +2,7 @@ mainContainerImage:
   repositoryName: callisto-accruals-restapi
   tag: latest
 
+# TODO: DISABLE PR WHEN UNCOMMENTING
 #databaseMigrationImage:
 #  repositoryName: callisto-accruals-database
 #  tag: latest
