--- a/.drone.yml
+++ b/.drone.yml
@@ -44,8 +44,15 @@ accruals_quay_settings: &accruals_quay_settings
     file: Dockerfile
 
 steps:
+  - name: fetch
+    image: alpine/git
+    commands:
+      - "git fetch origin +refs/heads/main:"
+
   - name: build
     image: maven:3.8.3-openjdk-17
+    depends_on:
+      - fetch
     environment:
       ARTIFACTORY_TOKEN:
         from_secret: artifactory_token
