EAHW 2522: Accruals Database (#21)
* Remove existing helm files and use new helm repo.
Add dev values file. Temporarily exclude db values.

* Remove helm file lint step

* Remove constraint from deploy step and move to pipeline level.

* add debug setting. Use singular values_file in step.

* temporarily comment out container image from values

* use values files for step.

* remove debug setting

* Upgrade Spring Boot version, import jparest and create initial Agreement model

* add fields to entity, add changelog files and sql for agreements table.

* Create AccrualType model

* Create AgreementTarget model and set up foreign keys

* Add agreementId and accrualTypeId to  AgreementTarget model

* Add Accrual model and run checkstyle

* Fix to "Could not find ref 'main'" warning in SonarCloud, by fetching ref 'main' in a Drone step

* Add initial test coverage to pass Sonar analysis

* Remove Accrual Type entity and model it as an enum instead

* Make accrual's contributions attribute a java class instead of a map

* Add contributions_total column and change contributions to a map

* SuppressWarning not needed for IntelliJ 22.1.1 and higher

* Change contributions map to use UUID and update test

* Add unique constraints to accrual and agreement_target tables, tidy up todos

* Add drone step for database schema and update dev deploy to use helm repo

* Uncomment database env vars in values to run against dev db

* Remove @EqualsAndHashCode annotation from Contribution

* Add database migration image tag to deploy steps

* Add lint helm files step back in

* Revert "Add lint helm files step back in"

This reverts commit f15c78fa10cf1da1eecadf224d7fb0e020aae071.

* Remove kafka from dev values and further refactoring

* Create accrual_time_entry_id_idx index

* Move contributions' total inside Contributions class and use a set instead of map to hold contributions

* Use jsonb_path_ops class for index on ac

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,13 +19,6 @@ steps:
     commands:
       - hadolint Dockerfile
 
-  - name: lint_helm_files
-    image: pelotech/drone-helm3
-    settings:
-      mode: lint
-      chart: ./helm
-      values_file: ./helm/values.yaml
-
 ---
 kind: pipeline
 type: kubernetes
@@ -51,8 +44,15 @@ accruals_quay_settings: &accruals_quay_settings
     file: Dockerfile
 
 steps:
+  - name: fetch
+    image: alpine/git
+    commands:
+      - "git fetch origin +refs/heads/main:"
+
   - name: build
     image: maven:3.8.3-openjdk-17
+    depends_on:
+      - fetch
     environment:
       ARTIFACTORY_TOKEN:
         from_secret: artifactory_token
@@ -113,6 +113,58 @@ steps:
 ---
 kind: pipeline
 type: kubernetes
+name: callisto-accruals-database-schema
+
+platform:
+  os: linux
+  arch: amd64
+
+depends_on:
+  - lint-files
+
+trigger:
+  event:
+    exclude:
+      - promote
+
+database_quay_settings: &database_quay_settings
+  pull: if-not-exists
+  image: plugins/docker
+  settings:
+    registry: quay.io
+    repo: quay.io/ukhomeofficedigital/callisto-accruals-database
+    username:
+      from_secret: quay_robot_name
+    password:
+      from_secret: quay_robot_token
+    dockerfile: db/Dockerfile
+    context: db
+
+steps:
+  - name: build_tag_push_quay_branch
+    <<: *database_quay_settings
+    settings:
+      tags:
+        - ${DRONE_COMMIT_SHA}
+        - ${DRONE_SOURCE_BRANCH%%/*}
+    when:
+      event: pull_request
+
+  - name: build_tag_push_quay
+    <<: *database_quay_settings
+    settings:
+      tags:
+        - latest
+        - ${DRONE_COMMIT_SHA}
+    when:
+      event:
+        - push
+      branch:
+        - main
+
+---
+kind: pipeline
+type: kubernetes
 name: callisto-accruals-restapi-branch-deploy
 
 platform:
@@ -132,11 +184,15 @@ steps:
     settings:
       namespace: callisto-dev
       mode: upgrade
-      chart: ./helm
+      add_repos: helm_repo=https://ukhomeoffice.github.io/callisto-helm-charts/
+      chart: helm_repo/callisto-base-service
+      chart_version: 1.0.1
       values:
-        - image.tag=${DRONE_COMMIT_SHA}
-        - branch=${DRONE_SOURCE_BRANCH%%/*}
-      values_file: ./helm/values.yaml
+        - mainContainerImage.tag=${DRONE_COMMIT_SHA}
+        - databaseMigrationImage.tag=${DRONE_COMMIT_SHA}
+        - ingress.branch=${DRONE_SOURCE_BRANCH%%/*}
+      values_files:
+        - ./helm/values/dev-values.yaml
       release: callisto-accruals-restapi-${DRONE_SOURCE_BRANCH%%/*}
       kube_certificate:
         from_secret: notprod_kube_api_certificate
@@ -148,7 +204,7 @@ steps:
 ---
 kind: pipeline
 type: kubernetes
-name: callisto-accruals-restapi-deploy
+name: callisto-accruals-restapi-dev-deploy
 
 platform:
   os: linux
@@ -159,7 +215,13 @@ depends_on:
   - callisto-accruals-restapi
 
 trigger:
-  status: success
+  event:
+    include:
+      - push
+    exclude:
+      - promote
+  branch:
+    - main
 
 steps:
   - name: deploy_to_dev
@@ -167,10 +229,14 @@ steps:
     settings:
       namespace: callisto-dev
       mode: upgrade
-      chart: ./helm
+      add_repos: helm_repo=https://ukhomeoffice.github.io/callisto-helm-charts/
+      chart: helm_repo/callisto-base-service
+      chart_version: 1.0.1
       values:
-        - image.tag=${DRONE_COMMIT_SHA}
-      values_file: ./helm/values.yaml
+        - mainContainerImage.tag=${DRONE_COMMIT_SHA}
+        - databaseMigrationImage.tag=${DRONE_COMMIT_SHA}
+      values_files:
+        - ./helm/values/dev-values.yaml
       release: callisto-accruals-restapi
       kube_certificate:
         from_secret: notprod_kube_api_certificate
@@ -178,11 +244,6 @@ steps:
         from_secret: notprod_kube_api_url
       kube_token:
         from_secret: notprod_kube_token
-    when:
-      event:
-        - push
-      branch:
-        - main
 
 ---
 kind: pipeline
@@ -201,7 +262,7 @@ trigger:
 
 depends_on:
   - callisto-accruals-restapi
-  - callisto-accruals-restapi-deploy
+  - callisto-accruals-restapi-dev-deploy
 
 steps:
   - name: slack
@@ -237,7 +298,7 @@ trigger:
 
 depends_on:
   - callisto-accruals-restapi
-  - callisto-accruals-restapi-deploy
+  - callisto-accruals-restapi-dev-deploy
 
 slack: &slack
   image: plugins/slack
