Rename dev token

--- a/.drone.yml
+++ b/.drone.yml
@@ -199,7 +199,7 @@ steps:
       kube_api_server:
           from_secret: notprod_kube_api_url
       kube_token:
-        from_secret: notprod_kube_token
+        from_secret: dev_kube_token
 
 ---
 kind: pipeline
@@ -243,7 +243,7 @@ steps:
       kube_api_server:
         from_secret: notprod_kube_api_url
       kube_token:
-        from_secret: notprod_kube_token
+        from_secret: dev_kube_token
 
 ---
 kind: pipeline
