Update repository to use postgres function add to liquibase change log and init script for test containers

--- a/db/changelog/db.changelog-main.yml
+++ b/db/changelog/db.changelog-main.yml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: changelog/001-create-initial-accruals-tables.json
   - include:
       file: changelog/002-add-person-id-column-to-accrual-table.json
+  - include:
+      file: changelog/003-function-get-impacted-accruals.json
